test/positive/a.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| open Ocamlstdlib |}]
type t1
type 'a t2
[@@@gospel {| function f1 (x: t1) : int t2 |}]
[@@@gospel {| function f2 (x: int) : t1 |}]
[@@@gospel {| function f3 (x: int) : int t2 = f1 (f2 x) |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ open Ocamlstdlib *)

type t1
  

type 'a t2
  

(*@ function f1 ... *)

(*@ function f2 ... *)

(*@ function f3 ... *)
File "a.mli", line 1, characters 0-34:
Error: No module with name `Ocamlstdlib'.
